# dgir

./: .gitignore  Cargo.toml  README.md  dgir.code-workspace
src/: album.rs  base.rs  color.rs  cursor.rs  lib.rs  main.rs  paint.rs  units.rs
src/draw/: coordinate.rs  curve.rs  elements.rs  mod.rs  transfer.rs
src/draw/curve/: groups.rs  iter.rs  mod.rs  par_iter.rs
src/gds/: mod.rs  togds.rs
tests/: component.rs  graph.rs
tests/common/: mod.rs
