[package]
name = "dgir"
version = "0.1.0"
authors = ["TsuITOAR"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gds21 = "^0.2"
num = "*"
log = "*"
rayon = { version = "*", optional = true }
nalgebra = { version = "*", optional = true }

[features]
default = ["rayon", "nalgebra"]
